--- a/index.html
+++ b/index.html
@@ -5,22 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing car</title>
     <link rel="stylesheet" href="./style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css"
+    rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <div>
-            <figure>
+    <main>
+        <header>
+            <div class=" container row">
+                    <figure class="logo">
+                        <img src="./assest/image/Modrino-removebg-preview 1 (1).png">
+                    </figure>
+                <nav  class="navbar">
+                    <ul>
+                        <li><a href="@"> Home</a></li>
+                        <li><a href="@"> About</a></li>
+                        <li><a href="@"> Service</a></li>
+                        <li><a href="@"> contact</a></li>
+                    </ul>
+                </nav>
+                <div class="humberger">
+                    <div>
+                        <i class="ri-menu-line"></i>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- hero-section -->
+        <section>
+            <div class="container">
+                <div class="hero-text">
+                    <h1>Find Your Dream Car</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since</p>
+                    <button><a  href="@">Read More </a></button>
 
-            </figure>
-        </div>
-        <nav>
-            <ul>
-                <li>
-
-                </li>
-            </ul>
-        </nav>
-        
-    </header>
+                </div>
+                <figure class="car-hero">
+                    <img src="./assest/image/car-design.png">
+                </figure>
+            </div>
+        </section>
+    </main>
+    
 </body>
 </html>
