--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <div class=" container row">
                     <figure class="logo">
-                        <img src="./assest/image/car-logo1.png">
+                        <img src="./assest/imsge/car-logo1.png">
                     </figure>
                 <nav  class="navbar">
                     <ul>
@@ -40,7 +40,7 @@
                     <button><a  href="#">Read More </a></button>
                 </div>
                 <figure class="car-hero">
-                    <img src="./assest/image/car-design.png">
+                    <img src="./assest/imsge/car-design.png">
                 </figure>
             </div>
             
